<?xml version="1.0"?>
<package format="2">
  <name>hungarian_solver</name>
  <version>0.0.0</version>
  <description>The hungarian_solver package</description>

  <maintainer email="ms.kataoka@gmail.com">masaya</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>eigen</build_depend>
  <build_depend>rclcpp</build_depend>
  <!--<build_depend>rostest</build_depend>-->
  <!--<build_depend>code_coverage</build_depend>-->
  <build_export_depend>eigen</build_export_depend>
  <build_export_depend>rclcpp</build_export_depend>
  <!--<build_export_depend>rostest</build_export_depend>-->
  <!--<build_export_depend>code_coverage</build_export_depend>-->
  <exec_depend>eigen</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <!--<exec_depend>rostest</exec_depend>-->
  <!--<exec_depend>code_coverage</exec_depend>-->
  <exec_depend>rosdoc_lite</exec_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
    <build_type>ament_cmake</build_type>
  </export>
</package>
