<?xml version="1.0"?>
<package format="2">
  <name>hungarian_solver</name>
  <version>0.0.0</version>
  <description>The hungarian_solver package</description>

  <maintainer email="ms.kataoka@gmail.com">masaya</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>eigen</depend>
  <depend>rclcpp</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ouxt_lint_common</test_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
    <build_type>ament_cmake</build_type>
  </export>
</package>
